--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,9 @@
   </head>
   <body>
     <h1>TODO: Build an app</h1>
+    <div id="main"></div>
+    <script src="https://momentjs.com/downloads/moment.js"></script>
+    <script src="https://momentjs.com/downloads/moment-timezone-with-data.js"></script>
+    <script src="/scripts/index.js"></script>
   </body>
 </html>
