--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,11 @@
     <title>What time is it where?</title>
   </head>
   <body>
+    <header>
+      <button id="addTimeZone">Add a timezone</button>
+    </header>
     <h1>TODO: Build an app</h1>
     <div id="main">
-        <button id="addTimeZone">Add a timezone</button>
     </div>
     <script src="https://momentjs.com/downloads/moment.js"></script>
     <script src="https://momentjs.com/downloads/moment-timezone-with-data.js"></script>
