--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>What time is it where?</title>
+    <link rel="stylesheet" href="/main.css" />
   </head>
   <body>
     <header>
       <button id="addTimeZone">Add a timezone</button>
     </header>
-    <h1>TODO: Build an app</h1>
-    <div id="main">
-    </div>
+    <section id="main"></section>
     <script src="https://momentjs.com/downloads/moment.js"></script>
     <script src="https://momentjs.com/downloads/moment-timezone-with-data.js"></script>
     <script src="/scripts/index.js"></script>
