--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,8 @@
     <link rel="stylesheet" href="/main.css" />
   </head>
   <body>
-    <header>
-      <button id="addTimeZone">Add a timezone</button>
-    </header>
-    <section id="main"></section>
-    <script src="https://momentjs.com/downloads/moment.js"></script>
-    <script src="https://momentjs.com/downloads/moment-timezone-with-data.js"></script>
+    <div id="main"></div>
+    <script src="https://unpkg.com/luxon@1.25.0/build/global/luxon.min.js"></script>
     <script src="/scripts/index.js"></script>
   </body>
 </html>
